# lxterminal

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Dockerfile  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  build-install.sh  configure.ac  configure.ac.mine  configure.ac.r1199  lxterminal.xml
data/: Makefile.am  lxterminal-preferences.glade  lxterminal-preferences.ui  lxterminal.conf.in  lxterminal.desktop  lxterminal.desktop.in  menu.ui
debian/: changelog  control  copyright  dirs  lxterminal.xpm  manpages  menu  postinst  prerm  rules  watch
deps.docker/: Dockerfile
man/: Makefile.am  lxterminal.1  lxterminal.sgml  lxterminal.xml
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  de_AT.po  de_CH.po  de_DE.po  el.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  (+33 more)
src/: Makefile.am  encoding.c  encoding.h  lxterminal.c  lxterminal.h  preferences.c  preferences.h  setting.c  setting.h  tab.c  tab.h  unixsocket.c  unixsocket.h  xml-purge.c
